@@ -23,6 +23,7 @@ create/data/images/UPS.png -text svneol=unset#unset
 create/data/images/UPS_small.png -text svneol=unset#unset
 create/data/images/Workstation.png -text svneol=unset#unset
 create/data/images/Workstation_small.png -text svneol=unset#unset
+create/data/images_oracle.sql -text
 create/data/images_pgsql.sql -text
 create/data/images_sqlite3.sql -text
 create/data/nodes_master.sql -text
